--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ h2,
 h3,
 h4 {
   color: #2c2d30;
+  z-index: 2;
 }
 strong {
   font-weight: 700;
@@ -57,27 +58,52 @@ button:hover,
 button:active {
   outline: none;
 }
+
+#top-box {
+  z-index: 2;
+}
+
 #main-container {
   width: 100%;
   height: 100%;
   display: flex;
+  z-index: 2;
 }
 
 #msg-column {
-  position: absolute;
-  bottom: 100px;
-  margin-bottom: 10px;
-  max-height: 75%;
-  overflow: scroll;
+  /* position: absolute;
+  bottom: 10px;
+  max-height: 85%;
+  overflow-y: scroll;
+  overscroll-behavior: y proximity;
+  scroll-snap-align: end; */
+
+  height: 600px;
+  overflow: auto;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+#msg-column > div > div:last-child {
+  scroll-snap-align: end;
 }
 
 .msg-item {
   padding: 5px;
-  z-index: -1;
+}
+
+#form-div {
+  bottom: 0px;
+  padding-bottom: 50px;
 }
 
 #msg-input {
   width: 90%;
+}
+
+#white-space {
+  position: absolute;
+  bottom: 0px;
 }
 
 .team-menu {
