--- a/styles.css
+++ b/styles.css
@@ -16,23 +16,48 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Lato", Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   color: #555459;
-  background-color: #4d394b;
   overflow: hidden;
+  background-color: #4d394b;
 }
-h1,
-h2,
-h3,
-h4 {
-  color: #2c2d30;
-  z-index: 2;
+
+#panel-container {
+  display: inline-flex;
+  margin: 0;
 }
-strong {
-  font-weight: 700;
+
+#left-panel {
+  color: #fff;
+  background-color: #4d394b;
+  flex-grow: 1;
+  flex-basis: 20%;
+  min-width: 20%;
 }
+
+#left-header {
+  width: 100%;
+  padding: 18px 18px 0;
+}
+
+h1#team-title {
+  font-size: 18px;
+  font-weight: 900;
+}
+
+#center-panel {
+  background-color: #fff;
+  flex-grow: 3;
+  flex-basis: 60%;
+}
+
+#right-panel {
+  flex-grow: 1;
+  flex-basis: 25%;
+}
+
 button {
   border: none;
   background: none;
@@ -44,48 +69,26 @@ button {
   cursor: pointer;
 }
 
-ul {
-  padding: 0;
-}
-
-#tty-display {
-  color: white;
-  border-color: white;
-}
-
 button:focus,
 button:hover,
 button:active {
   outline: none;
 }
 
-#top-box {
-  z-index: 2;
+ul {
+  padding: 1rem;
 }
 
-#main-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  z-index: 2;
+/* center-panel elements */
+
+#center-header {
+  padding: 1.5rem;
 }
 
 #msg-column {
-  /* position: absolute;
-  bottom: 10px;
-  max-height: 85%;
-  overflow-y: scroll;
-  overscroll-behavior: y proximity;
-  scroll-snap-align: end; */
-
-  height: 600px;
   overflow: auto;
   display: flex;
   flex-direction: column-reverse;
-}
-
-#msg-column > div > div:last-child {
-  scroll-snap-align: end;
 }
 
 .msg-item {
@@ -94,11 +97,13 @@ button:active {
 
 #form-div {
   bottom: 0px;
-  padding-bottom: 50px;
+}
+
+#msg-form {
 }
 
 #msg-input {
-  width: 90%;
+  margin: 40px;
 }
 
 #white-space {
@@ -106,52 +111,22 @@ button:active {
   bottom: 0px;
 }
 
-.team-menu {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 18px 18px 0;
-}
-.team-menu:hover {
-  background: var(--menu-bg-hover, #680001);
-}
-.team-menu__name {
-  font-size: 18px;
-  font-weight: 900;
-  color: var(--text-color, #fff);
-}
-.team-menu__status {
-  font-size: 15px;
-  line-height: 1.8;
-  color: var(--text-color, #fff);
-}
-.team-menu__status:before {
-  content: "";
-  display: inline-block;
-  margin-right: 0.2rem;
-  width: 9px;
-  height: 9px;
-  background: var(--active-presence, #00ffba);
-  border-radius: 50%;
+#details-image {
+  padding-right: 20px;
 }
 
-#left-sidebar {
-  position: relative;
-  z-index: 1;
-  min-width: 275px;
-  background: var(--column-bg, #4d394b);
-  color: var(--text-color, #fff);
-}
-.threads {
-  margin: 0.6rem 0;
-  padding: 0 18px;
+/* stuff from the slack theme I need to keep */
+
+.team-menu:hover {
+  background: var(--menu-bg-hover, #680001);
 }
 
 .channels,
 .dm {
-  margin: 0.5rem 0 1.5rem;
-  padding-right: 18px;
+  margin: 0.5rem;
+  padding-right: 1rem;
 }
+
 .channels__button,
 .dm__button,
 .channels__heading,
@@ -160,6 +135,7 @@ button:active {
   width: 100%;
   color: var(--text-color, #fff);
 }
+
 .channels__number,
 .dm__number {
   display: inline-block;
@@ -168,11 +144,7 @@ button:active {
   margin-left: 2px;
   font-size: 13px;
 }
-.channels__add,
-.dm__add {
-  font-size: 20px;
-  color: var(--text-color, #fff);
-}
+
 .channels__heading,
 .dm__heading {
   display: flex;
@@ -188,14 +160,14 @@ button:active {
 .dm__list {
   list-style-type: none;
 }
+
 .channels__button,
 .dm__button {
-  padding: 4px 0 4px 18px;
+  padding: 0.5rem;
   display: flex;
   align-items: center;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
 }
+
 .channels__button span,
 .channels__button:before,
 .dm__button:before {
@@ -205,22 +177,18 @@ button:active {
 .dm__button:hover {
   background: var(--hover-item, #be0002);
 }
-.channels__button--active,
-.dm__button--active,
-.channels__button--active:hover,
-.dm__button--active:hover {
-  background: var(--active-item, #d3a625);
-  color: var(--active-item-text, #680001);
-}
+
 .channels__button:before {
   content: "#";
 }
+
 .dm__button:before {
   content: "\f401";
   /* margin-right: 3px; */
   font-family: "Ionicons";
   font-size: 0.6rem;
 }
+
 .dm__button--online:before {
   content: "\f21b";
   color: var(--active-presence, #00ffba);
@@ -233,43 +201,4 @@ button:active {
 .dm__button--active.dm__button--online:before,
 .dm__button--active.dm__button--slackbot:before {
   color: var(--active-item-text, #680001);
-}
-#center-panel {
-  position: relative;
-  height: 100%;
-  background-color: #fff;
-  flex: 1;
-}
-.main__header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 18px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
-  background: #fff;
-}
-
-.main__content {
-  position: relative;
-  top: 60px;
-  height: calc(100vh - 60px);
-  overflow-y: scroll;
-}
-.main__container {
-  padding: 2rem;
-  margin: 0 auto;
-  width: 55%;
-  max-width: 860px;
-  min-width: 800px;
-}
-.main__section {
-  padding: 2rem 0 0;
-  border-bottom: 1px solid #ddd;
-}
-
-#details-image {
-  padding-right: 20px;
 }
