--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,45 @@ body {
   color: #fff;
   background-color: #4d394b;
   flex-grow: 1;
-  flex-basis: 20%;
-  min-width: 20%;
+  min-width: 20%; 
 }
 
+#right-panel {
+  flex-grow: 1;
+}
+
+/* all other left panel elements at the bottom */
+
+#center-panel {
+  background-color: #fff;
+  flex-grow: 3;
+  max-height: 100vh;
+  overflow:hidden;
+}
+
+#center-header {
+  z-index: 2;
+}
+
+#msg-area {
+position: absolute;
+bottom:100px;
+margin-bottom: 10px;
+overflow: scroll;
+}
+
+.msg-item {
+  padding: 30px;
+  z-index: -1;
+}
+
+/* right panel */
+
+#details-image {
+  padding-right: 20px;
+}
+
+/* stuff from the slack theme I need to keep */
 #left-header {
   width: 100%;
   padding: 18px 18px 0;
@@ -45,17 +80,6 @@ body {
 h1#team-title {
   font-size: 18px;
   font-weight: 900;
-}
-
-#center-panel {
-  background-color: #fff;
-  flex-grow: 3;
-  flex-basis: 60%;
-}
-
-#right-panel {
-  flex-grow: 1;
-  flex-basis: 25%;
 }
 
 button {
@@ -78,44 +102,6 @@ button:active {
 ul {
   padding: 1rem;
 }
-
-/* center-panel elements */
-
-#center-header {
-  padding: 1.5rem;
-}
-
-#msg-column {
-  overflow: auto;
-  display: flex;
-  flex-direction: column-reverse;
-}
-
-.msg-item {
-  padding: 5px;
-}
-
-#form-div {
-  bottom: 0px;
-}
-
-#msg-form {
-}
-
-#msg-input {
-  margin: 40px;
-}
-
-#white-space {
-  position: absolute;
-  bottom: 0px;
-}
-
-#details-image {
-  padding-right: 20px;
-}
-
-/* stuff from the slack theme I need to keep */
 
 .team-menu:hover {
   background: var(--menu-bg-hover, #680001);
