--- a/styles.css
+++ b/styles.css
@@ -37,16 +37,10 @@ body {
 
 }
 
-#right-panel {
-  min-width: 20%;
-  max-width: 20%;
-}
-
 /* all other left panel elements at the bottom */
 
 #center-panel {
   background-color: #fff;
-  /* flex-grow: 3; */
   max-height: 100vh;
   overflow:hidden;
 }
@@ -55,14 +49,24 @@ body {
   background-color: #fff;
   z-index: 2;
   opacity: 100;
+  padding: 2rem;
+  border-bottom: solid;
+  border-width: thin;
+}
+
+#today {
+padding-left: 50px;
 }
 
 #msg-area {
   position: absolute;
   bottom: 50px;
   overflow: scroll;
-  width: 59vw;
-  max-height: 80%;
+  width: 54vw;
+  max-height: 77%;
+  display:flex;
+  flex-direction: column-reverse;
+  padding-left: 30px;
 }
 
 #msg-container {
@@ -71,7 +75,7 @@ body {
 }
 
 .msg-item {
-  padding: 30px;
+  padding: .75rem;
   z-index: -1;
 }
 
@@ -79,6 +83,11 @@ body {
   position: fixed;
   bottom:10px;
 }
+
+#msg-input {
+  width: 39rem;
+}
+
 /* right panel */
 
 #details-image {
@@ -94,6 +103,11 @@ body {
 h1#team-title {
   font-size: 18px;
   font-weight: 900;
+}
+
+#details-image {
+  border: solid;
+  border-width: thin;
 }
 
 button {
