left panel almost there

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,30 @@ h1#team-title {
 }
 
 h4, h5 {
-    padding-top: 10px;
+    padding-top: 5px;
+}
+
+div#left-panel a{
+    text-decoration: none;
+    color: #fff;
+}
+
+div#left-panel p{
+    margin: 0;
+    padding: 8px 0 8px 0;
+}
+
+div#left-panel p#active{
+    font-weight: 900;
+    background-color: #1064A3;
+}
+
+div#left-panel p:hover{
+    background-color: #4C9689;
+}
+
+div#left-panel #channels {
+
 }
 
 
