--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,14 @@ body {
     -webkit-font-smoothing: antialiased;
     overflow: hidden;
     background-color: #fff;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 
 #search-bar {
     display: block;
     width: 100%;
-    height: 40px;
+    height: 36px;
     background-color: #350E36;
     text-align: center;
     padding-top: 10px;
@@ -174,7 +174,7 @@ span.msg-name {
 
 #input-area {
     width: 100%;
-    height: 172px;
+    height: 160px;
     /* background-color: #2ac44b; */
     /* background-color: #fff;     */
     display: grid;
